New Design Integration and Bug Fixing in the Profile form

--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.css
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.css
@@ -13,3 +13,8 @@
     border-bottom: 1px solid #ccc;
     width: fit-content;
 }
+.ul-value{
+	font-size: 14px;
+    min-height: 26px;
+	font-weight: 600;
+}
