--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -1,146 +1,120 @@
 <div formGroupName="jobPref">
-  <div class="row mt-5 ">
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postJob.jobType" | translate }}</label>
-        <select appMarkAsterisk formControlName="job_type" class="form-control" name="job-type">
-          <option [value]="''">{{"common.select" | translate }}</option>
-          <option *ngFor="let type of sharedService.onGetJobType(); let i = index" [value]="i">
-            {{type}}
-          </option>
-        </select>
-        <app-control-messages [control]="f['type']"></app-control-messages>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postYourResume.rolesLookingFor" | translate }}</label>
-        <input appMarkAsterisk formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.rolesLookingFor' | translate">
-        <app-control-messages [control]="f['job_role']"></app-control-messages>
-      </div>
-    </div>
-  </div>
-  <div class="row mt-2 ">
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postJob.availability" | translate }}</label>
-        <select appMarkAsterisk formControlName="availability" class="form-control">
-          <option [value]="null">{{"common.select" | translate }}</option>
-          <option *ngFor="let type of availabilityArray" [value]="type.id">{{ type.text }}</option>
-          <!-- <option *ngFor="let availabilityOption of sharedService.onGetAvailability(); let i = index" [value]="availability"> -->
-            <!-- {{availabilityOption?.text}}
-          </option> -->
-        </select>
-        <app-control-messages [control]="f['availability']"></app-control-messages>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postJob.travel" | translate }} </label>
-        <select appMarkAsterisk formControlName="travel" class="form-control">
-          <option [value]="null">{{"common.select" | translate }}</option>
-          <option *ngFor="let travel of travelArray; let i = index" [value]="travel?.id">
-            {{travel?.text}}
-          </option>
-        </select>
-        <app-control-messages [control]="f['travel']"></app-control-messages>
-      </div>
-    </div>
-  </div>
-<!--   <div class="row mt-2">
-
-    <div class="col-lg-6 col-md-6">
-      <div class=" form-group">
-        <label>{{"postJob.workAuthorization" | translate }}</label>
-        <div appMarkAsterisk class="mt-2">
-          <div class="custom-control custom-radio custom-control-inline">
-            <input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
-              name="work_authorization" class="custom-control-input">
-            <label class="custom-control-label"
-              for="customRadioInline5">{{"postYourResume.iHaveWorkAuthorization" | translate }}</label>
-          </div>
-          <div class="custom-control custom-radio custom-control-inline">
-            <input (change)="onChangeFieldValue('work_authorization', 1)" [value]="1" formControlName="work_authorization" type="radio" id="customRadioInline6"
-              name="work_authorization" class="custom-control-input">
-            <label class="custom-control-label"
-              for="customRadioInline6">{{"postYourResume.iNeedVisaAponsorship" | translate }}</label>
-          </div>
-          <app-control-messages [control]="f['work_authorization']"></app-control-messages>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>&nbsp;</label>
-         <div class="mt-2">
-          <div class="custom-control custom-checkbox mr-sm-2">
-            <input formControlName="remote_only" (change)="onChangeFieldValue('remote_only', $event?.target?.checked)" type="checkbox" class="custom-control-input" id="OnlyRemote">
-            <label class="custom-control-label" for="OnlyRemote">{{"postYourResume.onlyRemote" | translate }}</label>
-           </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <div class="row mt-2">
-    <div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>{{"postYourResume.arYouWillingToRelocate" | translate }}?</label>
-         <div appMarkAsterisk class="mt-2">
-           <div class="custom-control custom-radio custom-control-inline">
-            <input (change)="onChangeFieldValue('willing_to_relocate', true)" [value]="true" formControlName="willing_to_relocate" type="radio" id="customRadioInline3" name="willing_to_relocate" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline3">{{"common.yes" | translate }}</label>
-          </div>
-          <div class="custom-control custom-radio custom-control-inline">
-            <input (change)="onChangeFieldValue('willing_to_relocate', false)" [value]="false" formControlName="willing_to_relocate" type="radio" id="customRadioInline4" name="willing_to_relocate" class="custom-control-input">
-            <label class="custom-control-label" for="customRadioInline4">{{"common.no" | translate }}</label>
-          </div>
-        </div>
-      </div>
-    </div>
-	<div class="col-lg-4 col-md-6">
-      <div class=" form-group">
-        <label>&nbsp;</label>
-         <div class="mt-2">
-          <div class="custom-control custom-checkbox mr-sm-2">
-            <input formControlName="remote_only" (change)="onChangeFieldValue('remote_only', $event?.target?.checked)" type="checkbox" class="custom-control-input" id="OnlyRemote">
-            <label class="custom-control-label" for="OnlyRemote">{{"postYourResume.onlyRemote" | translate }}</label>
-           </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6" *ngIf="(!childForm?.value?.jobPref?.remote_only && !childForm?.value?.jobPref?.willing_to_relocate)">
-      <div class=" form-group">
-        <label>{{"postYourResume.preferredLocation" | translate }}</label>
-        <select formControlName="preferred_location" class="form-control">
-          <option [value]="null">{{"common.select" | translate }}</option>
-          <option *ngFor="let preferredLocation of sharedService.onGetPreferedLocation(); let i = index" [value]="i">
-            {{preferredLocation}}
-          </option>
-        </select>
-        <app-control-messages [control]="f['preferred_location']"></app-control-messages>
-      </div>
-    </div>
-  </div>
 <div class="row mt-2">
 		<div class="col-lg-12 col-md-6">
 			<div class=" form-group">
-				<label>Preferred Country</label>
+				<label>{{"postJob.jobType" | translate }}</label>
+				<div appMarkAsterisk class="mt-2"></div>
 				<div class="pt-2">
-					<button type="button" class="btn btn-fltr" id="226" (click)="countryClick('United States',$event);">United States</button>
-					<button type="button" class="btn btn-fltr" id="225"  (click)="countryClick('United Kingdom',$event);">United Kingdom</button>
-					<button type="button" class="btn btn-fltr" id="13"  (click)="countryClick('Australia',$event);">Australia</button>
-					<button type="button" class="btn btn-fltr" id="99"  (click)="countryClick('India',$event);">India</button>
-					<button type="button" class="btn btn-fltr" id="192"  (click)="countryClick('Singapore',$event);">Singapore</button>
-					<button type="button" class="btn btn-fltr" id="73"  (click)="countryClick('France',$event);">France</button>
-					<button type="button" class="btn btn-fltr" id="38"  (click)="countryClick('Canada',$event);">Canada</button>
-					<button type="button" class="btn btn-fltr" id="107"  (click)="countryClick('Japan',$event);">Japan</button>
-					<button type="button" class="btn btn-fltr" id="129"  (click)="countryClick('Malaysia',$event);">Malaysia</button>
-					<!-- <button type="button" class="btn btn-fltr bg-light">Others</button> -->
+					<button type="button" class="btn btn-fltr" id="1"  (click)="jobClick('Full Time',$event);">Full Time</button>
+					<button type="button" class="btn btn-fltr" id="2"  (click)="jobClick('Part Time ',$event);">Part Time</button>
+					<button type="button" class="btn btn-fltr" id="3"  (click)="jobClick('Contract',$event);">Contract</button>
+					<button type="button" class="btn btn-fltr" id="4"  (click)="jobClick('Freelance',$event);">Freelance</button>
+					<button type="button" class="btn btn-fltr" id="5"  (click)="jobClick('Internship',$event);">Internship</button>
+					<button type="button" class="btn btn-fltr" id="6"  (click)="jobClick('Temporary',$event);">Temporary </button>
+					<button type="button" class="btn btn-fltr" id="7"  (click)="jobClick('Permanent',$event);">Permanent</button>
+					<button type="button" class="btn btn-fltr" id="8"  (click)="jobClick('Onsite',$event);">Onsite</button>
+				</div>
+			</div>
+			<small *ngIf="job_type_error" class="text-danger">Please Select the job type </small>
+		</div>
+	</div>
+	<div class="row mt-5 ">
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.rolesLookingFor" | translate }}</label>
+				<input appMarkAsterisk formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.rolesLookingFor' | translate">
+				<app-control-messages [control]="f['job_role']"></app-control-messages>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.arYouWillingToRelocate" | translate }}?</label>
+				<div appMarkAsterisk class="mt-2">
+					<div class="custom-control custom-radio custom-control-inline">
+						<input (change)="onChangeFieldValue('willing_to_relocate', true)" [value]="true" formControlName="willing_to_relocate" type="radio" id="customRadioInline3" name="willing_to_relocate" class="custom-control-input">
+						<label class="custom-control-label" for="customRadioInline3">{{"common.yes" | translate }}</label>
+					</div>
+					<div class="custom-control custom-radio custom-control-inline">
+						<input (change)="onChangeFieldValue('willing_to_relocate', false)" [value]="false" formControlName="willing_to_relocate" type="radio" id="customRadioInline4" name="willing_to_relocate" class="custom-control-input">
+						<label class="custom-control-label" for="customRadioInline4">{{"common.no" | translate }}</label>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	  <div class="row mt-2">
+	<div class="row mt-2 ">
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postJob.availability" | translate }}</label>
+				<select appMarkAsterisk formControlName="availability" class="form-control">
+					<option [value]="null">{{"common.select" | translate }}</option>
+					<option *ngFor="let type of availabilityArray" [value]="type.id">{{ type.text }}</option>
+				</select>
+				<app-control-messages [control]="f['availability']"></app-control-messages>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>&nbsp;</label>
+				<div class="mt-2">
+					<div class="custom-control custom-checkbox mr-sm-2">
+						<input formControlName="remote_only" (change)="onChangeFieldValue('remote_only', $event?.target?.checked)" type="checkbox" class="custom-control-input" id="OnlyRemote">
+						<label class="custom-control-label" for="OnlyRemote">{{"postYourResume.onlyRemote" | translate }}</label>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row mt-2">
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postJob.travel" | translate }} </label>
+				<select appMarkAsterisk formControlName="travel" class="form-control">
+					<option [value]="null">{{"common.select" | translate }}</option>
+					<option *ngFor="let travel of travelArray; let i = index" [value]="travel?.id">
+						{{travel?.text}}
+					</option>
+				</select>
+				<app-control-messages [control]="f['travel']"></app-control-messages>
+			</div>
+		</div>
+		<div class="col-lg-4 col-md-6" *ngIf="(!childForm?.value?.jobPref?.remote_only && !childForm?.value?.jobPref?.willing_to_relocate)">
+			<div class=" form-group">
+				<label>{{"postYourResume.preferredLocation" | translate }}</label>
+				<select formControlName="preferred_location" class="form-control">
+					<option [value]="null">{{"common.select" | translate }}</option>
+					<option *ngFor="let preferredLocation of sharedService.onGetPreferedLocation(); let i = index" [value]="i">
+						{{preferredLocation}}
+					</option>
+				</select>
+				<app-control-messages [control]="f['preferred_location']"></app-control-messages>
+			</div>
+		</div>
+	</div>
+	<div class="row mt-2">
+		<div class="col-lg-12 col-md-6" *ngIf="childForm?.value?.personalDetails?.work_authorization == 0 ">
+			<div class=" form-group">
+				<label>Please choose the job of preferred countries</label>
+				<div class="pt-2">
+					<a *ngFor="let country of othercountry">
+						<button type="button" class="btn btn-fltr" id={{country.id}} (click)="countryClick(country.nicename,$event);">{{country.nicename}}</button>
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-12 col-md-6">
+			<div class=" form-group">
+				<label>&nbsp;</label>
+				<div class="mt-2">
+					<div class="custom-control custom-checkbox mr-sm-2">
+						<input formControlName="visa_sponsered"  type="checkbox" class="custom-control-input" id="visaSponsered">
+						<label class="custom-control-label" for="visaSponsered">{{"postJob.visaSponsered" | translate }}</label>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	  <!-- <div class="row mt-2">
 		<div class="col-lg-10 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.othercountry" | translate }} </label> 
@@ -169,7 +143,7 @@
 				 </ngx-select>
 				<app-control-messages [control]="f['preferred_countries']"></app-control-messages>									  
 			</div>
-		</div>				
+		</div>	 			
 		
-	</div>
+	</div>-->
 </div>
