--- a/frontend/src/app/shared/component/contact-card/contact-card.component.html
+++ b/frontend/src/app/shared/component/contact-card/contact-card.component.html
@@ -13,23 +13,24 @@
           <small *ngIf="isContactIcon" (click)="onToggleContactInfoModal(true)" class="ml-2" type="button" data-toggle="modal" data-target="#contactModal">
             <i class="fas fa-address-card"></i>
             </small>
+			<small [routerLink]="[ '/user/create-candidate' ]" *ngIf="isEdit" class="ml-2" href="javascript:;" title="Edit" style="font-size: 11px;cursor:pointer;" ><i
+            class="fas fa-pencil-alt text-orange"></i></small>
         </h5>
       </div>
       <div class="col-lg-5 text-right">
-        <a [routerLink]="[ '/user/create-candidate' ]" *ngIf="isEdit" class="btn btn-outline-warning btn-sm mr-1" href="javascript:;" title="Edit"><i
-            class="fas fa-pencil-alt"></i></a>
+			
+        <span class="mr-1">
+          <a
+          [class.disabled]="!selectedCover?.file"
+          (click)="selectedCover?.file && onToggleCoverForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedCover?.file))" class="btn btn-outline-orange  btn-sm" href="javascript:;">
+            <i class="fas fa-file-alt"></i> Cover Lettter
+          </a>
+        </span>
         <span *ngIf="isResume" class="mr-1">
           <a
           [class.disabled]="!selectedResume?.file"
           (click)="selectedResume?.file && onToggleResumeForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedResume?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
             <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate }}
-          </a>
-        </span>
-        <span class="mr-1">
-          <a
-          [class.disabled]="!selectedCover?.file"
-          (click)="selectedCover?.file && onToggleCoverForm(true, (userInfo?.meta?.doc_resume?.path + '/' + userInfo?.meta?.doc_resume?.folder + '/' + selectedCover?.file))" class="btn btn-outline-blue btn-sm" href="javascript:;">
-            <i class="fas fa-file-alt"></i> Cover Lettter
           </a>
         </span>
 		<a (click)="onTabChange()" style="margin-top: .25rem;" class="btn btn-outline-green btn-sm mr-1" href="javascript:;" title="Edit"><i
