--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -4,31 +4,147 @@
 			 <h6>{{"dashboard.personalDetails" | translate }}</h6>
 		</div>
 	</div>
-	<div class="col-lg-12 d-flex mb-4">
-		<div class="personal-info">
-			<p>{{"postJob.availableIn" | translate }}</p>
-			<h6>{{userInfo?.availability == 0 ? 'Immediate' : userInfo?.availability + ' Days'}}</h6>
-			
-		</div>
-		<div *ngIf="userInfo.visa_type">
-		<div class="personal-info" *ngIf="userInfo.visa_type.length !=0" >
-			<p *ngIf="userInfo.visa_type.length !=0">{{"postJob.workAuthorization" | translate }}</p>
-			<h6 *ngIf="userInfo.visa_type.length !=0">{{userInfo?.visa_type }}</h6>
-		</div>
-		</div>
-		<div class="personal-info">
-			<p>{{"postJob.travel" | translate }}</p>
-			<h6>{{userInfo?.travel == 0 ? 'No' : userInfo?.travel + '%'}}</h6>
-		</div>
-		<div class="personal-info">
-			<p>{{"postJob.willingToRelocate" | translate }}</p>
-			<h6>{{utilsHelperService.onGetYesOrNoValue(userInfo?.willing_to_relocate)}}</h6>
-		</div>
-		<div class="personal-info">
-			<p>{{"postJob.remote" | translate }}</p>
-			<h6>{{utilsHelperService.onGetYesOrNoValue(userInfo?.remote_only)}}</h6>
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.nationality" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{this.findCountry(userInfo?.nationality)}}</li>
+				</ul>
+			</div>
 		</div>
 	</div>
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.relocation" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{utilsHelperService.onGetYesOrNoValue(userInfo?.willing_to_relocate)}}</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">
+					{{"dashboard.education" | translate }}
+				</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group ul-value">
+				{{this.findEducation(userInfo?.education_qualification)}}
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.jobType" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group ul-value">
+					{{(userInfo?.job_type || userInfo?.job_type == 0) ? sharedService.onGetJobType(userInfo?.job_type) : '--'}}
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.availability" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{userInfo?.availability == 0 ? 'Immediate' : userInfo?.availability + ' Days'}}</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6" *ngIf="userInfo?.visa_type">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.workAuthorisation" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group ul-value">
+					{{utilsHelperService.onConvertArrayToString(userInfo?.visa_type)}}
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"postJob.travel" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{userInfo?.travel == 0 ? 'No' : userInfo?.travel + '%'}}</li>
+				</ul>
+			</div>
+		</div>
+	</div>	
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"postJob.remote" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group">
+					<li class="list-group-item text-capitalize">{{utilsHelperService.onGetYesOrNoValue(userInfo?.remote_only)}}</li>
+				</ul>
+			</div>
+		</div>
+	</div>	
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.workAuthorisationIn" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info ul-value">
+				{{this.findCountryArray(userInfo?.authorized_country)}}				
+			</div>
+		</div>
+	</div>	
+	<div class="col-lg-6">
+		<div class="row">
+			<div class="col-lg-6 caption">
+				<ul class="list-group">
+					<li class="list-group-item">{{"dashboard.preferredLocation" | translate }}</li>
+				</ul>
+			</div>
+			<div class="col-lg-6 info">
+				<ul class="list-group ul-value">
+				{{findCountryArray(userInfo?.preferred_countries)}}
+				</ul>
+			</div>
+		</div>
+	</div>	
+		
 </div>
 <div class="row mt-3 info-box">
 	<div class="col-lg-12">
@@ -46,8 +162,7 @@
 			<li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
 			<li class="list-group-item">{{"postYourResume.others" | translate }}</li>
 			<li class="list-group-item" *ngIf="!fieldsExclude?.clients_worked">{{"postYourResume.previousEmployers" | translate}}</li>
-			<li class="list-group-item">{{"postJob.jobType" | translate}}</li>
-			<li class="list-group-item" *ngIf="!fieldsExclude?.job_role">{{"postYourResume.rolesLookingFor" | translate }}</li>
+			<li class="list-group-item">{{"dashboard.languageKnown" | translate}}</li>
      
 		</ul>
 	</div>
@@ -86,10 +201,7 @@
 				{{utilsHelperService.onConvertArrayToString(userInfo?.clients_worked)}}
 			</li>
 			<li class="list-group-item text-capitalize">
-				{{(userInfo?.job_type || userInfo?.job_type == 0) ? sharedService.onGetJobType(userInfo?.job_type) : '--'}}
-			</li>
-			<li class="list-group-item text-capitalize" *ngIf="!fieldsExclude?.job_role">
-				{{userInfo?.job_role ? userInfo?.job_role : '--'}}
+				{{findLanguageArray(userInfo?.language_known)}}
 			</li>
 		</ul>
 	</div>
@@ -104,14 +216,14 @@
 		<div class="media mb-2" *ngFor="let certification of userInfo?.certification">
 			<img src="assets/images/certifications-icon.png" width="26px" class="mr-2" alt="SAP">
 			<div class="media-body">
-				<p class="my-2 small">{{certification}} </p>
+				<p class="my-1 h5">{{certification}} </p>
 			</div>
 		</div>
 	</div>
 </div> 
-<div class="row mt-3 info-box">	
-	<div class="col-lg-12">
-		<div class="pj-title mb-3 border-primary">
+<div class="row mt-3 info-box"  *ngIf="userInfo?.reference" >	
+	<div class="col-lg-12" *ngIf="userInfo?.reference?.length !=0">
+		<div class="pj-title mb-3 border-primary" *ngIf="userInfo?.reference[0].name && userInfo?.reference[0].email && userInfo?.reference[0].company_name">
 			<h6 class="text-blue" role="button" (click)="show = !show"> {{"dashboard.reference" | translate }}  <i class="fas fa-angle-down"></i></h6>
 		</div>
 		<div *ngIf="show" [@slideInOut] class="row mt-2" style="padding:0px;">
