--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -103,7 +103,7 @@
     </div>
     <div class="modal-footer full-width">
       <button type="button" class="btn btn-theme-orange"
-      (click)="mbRef?.close()">Close</button> 
+      (click)="mbRef?.close()">Later</button> 
 	  <button type="button" class="btn btn-primary"
       (click)="onTabChange({tabName: 'resume', tabNumber: 6});mbRef?.close()">Upload</button>
     </div>
