--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -70,7 +70,7 @@
           class="text-capitalize"
           (select)="onSelectSkillEvents($event, i)"
           [placeholder]="'Select Skills'"
-          [items]="skillItems"
+          [items]="skillItemsSecondary"
           formControlName="skill_id"
           optionValueField="id"
           optionTextField="tag"
