Profile Page Next Button validation Fix and Authorized Country select

--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -9,7 +9,15 @@
 
   <div class="col-lg-2 col-md-6">
     <div class="form-group">
-      <button [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber != 4" type="button"
+      <button [disabled]="(!createCandidateForm.controls.personalDetails.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 1" type="button"
+        class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
+        {{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
+      </button>
+      <button [disabled]="(!createCandidateForm.controls.educationExp.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 2" type="button"
+        class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
+        {{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
+      </button>
+      <button [disabled]="(!createCandidateForm.controls.skillSet.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber == 3" type="button"
         class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
         {{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
       </button>
