--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -357,7 +357,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row mt-3 info-box">
+		<div class="row mt-3 info-box" *ngIf="childForm?.value?.skillSet?.certification?.length != 0 ">
 			<div class="col-lg-12">
 				<div class="pj-title mb-3">
 					 <h6>{{"postJob.certification" | translate }}</h6>
