--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -22,7 +22,7 @@
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
 				<label>{{"postYourResume.rolesLookingFor" | translate }}</label>
-				<input appMarkAsterisk formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.rolesLookingFor' | translate">
+				<input formControlName="job_role" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.rolesLookingFor' | translate">
 				<app-control-messages [control]="f['job_role']"></app-control-messages>
 			</div>
 		</div>
@@ -114,36 +114,4 @@
 			</div>
 		</div>
 	</div>
-	  <!-- <div class="row mt-2">
-		<div class="col-lg-10 col-md-6">
-			<div class=" form-group">
-				<label>{{"postYourResume.othercountry" | translate }} </label> 
-				<ngx-select
-					class="text-capitalize"
-					[placeholder]="'Other Country'"
-					[multiple]="true"
-					[items]="othercountry"
-					formControlName="preferred_countries"
-					optionValueField="id"
-					optionTextField="nicename"
-					autoClearSearch="true"
-					noResultsFound="No results found"
-					 >
-				 <ng-template ngx-select-option-selected let-option let-text="text">
-				  {{option?.text ? option?.text?.split('-')[0] : ''}}
-				</ng-template>
-
-				<ng-template ngx-select-option let-option let-text="text">
-					{{option?.text}}
-				</ng-template>
-
-				<ng-template ngx-select-option-not-found>
-					Nothing found
-				</ng-template>
-				 </ngx-select>
-				<app-control-messages [control]="f['preferred_countries']"></app-control-messages>									  
-			</div>
-		</div>	 			
-		
-	</div>-->
 </div>
