--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -206,13 +206,13 @@
 		</ul>
 	</div>
 </div>
-<div class="row mt-3 info-box">
-	<div class="col-lg-12">
+<div class="row mt-3 info-box" *ngIf="userInfo?.certification">
+	<div class="col-lg-12" *ngIf="userInfo?.certification.length !=0">
 		<div class="pj-title mb-3">
 			 <h6>{{"dashboard.certifications" | translate }}</h6>
 		</div>
 	</div> 
-	<div class="col-lg-12" *ngIf="userInfo?.certification">
+	<div class="col-lg-12" *ngIf="userInfo?.certification.length !=0">
 		<div class="media mb-2" *ngFor="let certification of userInfo?.certification">
 			<img src="assets/images/certifications-icon.png" width="26px" class="mr-2" alt="SAP">
 			<div class="media-body">
